<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:divider="@drawable/table_v_divider"
    android:background="@drawable/abc_popup_background_mtrl_mult"
    android:showDividers = "middle"
    android:orientation="vertical">
   <TextView
       android:id="@+id/tv_shortcut_recharge"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/public_CommonPadding_s"
       android:drawableLeft="@drawable/icon_shortcut_recharge"
       android:drawablePadding="@dimen/spacing_xs"
       android:gravity="center_vertical"
       android:textColor="@color/common_text"
       android:textSize="@dimen/text_normal"
       android:text="@string/shortcut_recharge"/>

   <TextView
       android:id="@+id/tv_shortcut_proxy_center"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/public_CommonPadding_s"
       android:drawableLeft="@drawable/icon_shortcut_dl"
       android:drawablePadding="@dimen/spacing_xs"
       android:gravity="center_vertical"
       android:textColor="@color/common_text"
       android:textSize="@dimen/text_normal"
       android:text="@string/shortcut_proxy_center"/>

   <TextView
       android:id="@+id/tv_shortcut_help"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/public_CommonPadding_s"
       android:drawableLeft="@drawable/icon_shortcut_help"
       android:drawablePadding="@dimen/spacing_xs"
       android:gravity="center_vertical"
       android:textColor="@color/common_text"
       android:textSize="@dimen/text_normal"
       android:text="@string/shortcut_help"/>

   <TextView
       android:id="@+id/tv_shortcut_game_rules"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/public_CommonPadding_s"
       android:drawableLeft="@drawable/icon_shortcut_rp"
       android:drawablePadding="@dimen/spacing_xs"
       android:gravity="center_vertical"
       android:textColor="@color/common_text"
       android:textSize="@dimen/text_normal"
       android:text="@string/shortcut_game_rules"/>

   <TextView
       android:id="@+id/tv_shortcut_create_group"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/public_CommonPadding_s"
       android:drawableLeft="@drawable/icon_shortcut_share"
       android:drawablePadding="@dimen/spacing_xs"
       android:gravity="center_vertical"
       android:textColor="@color/common_text"
       android:textSize="@dimen/text_normal"
       android:text="@string/shortcut_create_group"/>

</LinearLayout>

