<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <me.jessyan.armscomponent.commonres.view.StatusBarHeightView
        android:id="@+id/viewStatusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_xl"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/public_CommonTitleText"
            android:layout_centerInParent="true"
            tools:text="@string/public_app_name"/>

    </RelativeLayout>
    <View style="@style/discover_style_view"></View>
    <LinearLayout
        android:id="@+id/layout_safe"
        style="@style/setting_layout_style">
        <TextView
            android:text="@string/setting_safe"
            style="@style/setting_text_style" />
        <TextView
            android:id="@+id/tv_safe"
            tools:text="@string/setting_safe"
            android:gravity="right|center_vertical"
            android:drawableRight="@drawable/icon_go"
            style="@style/setting_text_style"
            />
    </LinearLayout>
    <View style="@style/discover_style_view"></View>
    <LinearLayout
        android:id="@+id/layout_notification"
        style="@style/setting_layout_style">
        <TextView
            style="@style/setting_text_style"
            android:text="@string/setting_notification"
            />
        <TextView
            android:gravity="right|center_vertical"
            android:drawableRight="@drawable/icon_go"
            style="@style/setting_text_style"
            />
    </LinearLayout>
    <View style="@style/discover_line"></View>
    <LinearLayout
        android:id="@+id/layout_clear"
        style="@style/setting_layout_style">
        <TextView
            style="@style/setting_text_style"
            android:text="@string/setting_clear"
            />
        <TextView
            android:gravity="right|center_vertical"
            android:drawableRight="@drawable/icon_go"
            style="@style/setting_text_style"
            />
    </LinearLayout>
    <View style="@style/discover_line"></View>
    <LinearLayout
        android:id="@+id/layout_record_time"
        style="@style/setting_layout_style">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                style="@style/setting_text_style"
                android:text="@string/setting_record_time"
                />
            <TextView
                android:id="@+id/tv_day_time"
                style="@style/setting_text_style"
                android:text="@string/setting_seven_day"
                android:textColor="@color/text_gray"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_record_time"
            android:gravity="right|center_vertical"
            android:drawableRight="@drawable/icon_go"
            style="@style/setting_text_style"
            android:text="@string/setting_seven_day"
            />
    </LinearLayout>
    <View style="@style/discover_line"></View>
    <LinearLayout
        android:id="@+id/layout_about"
        style="@style/setting_layout_style">
        <TextView
            style="@style/setting_text_style"
            android:text="@string/setting_about"
            />
        <TextView
            android:id="@+id/tv_version"
            android:gravity="right|center_vertical"
            android:drawableRight="@drawable/icon_go"
            style="@style/setting_text_style"
            tools:text="版本1.3.5"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_small"
            />
    </LinearLayout>
    <View style="@style/discover_style_view"
        android:layout_height="@dimen/spacing_xxl"></View>
    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/white"
        android:text="@string/setting_exit"/>
    <View style="@style/discover_style_view"
        android:layout_height="match_parent"></View>
</LinearLayout>