<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/public_include_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:background="@color/public_white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/spacing_m"
            android:hint="@string/enter_phone_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="@dimen/spacing_l"
            android:textColor="@color/common_text"
            android:textSize="@dimen/text_sub_title" />

        <View
            style="@style/public_CommonLine" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_l"
            android:background="@null"
            android:drawableLeft="@drawable/ic_pwd"
            android:drawablePadding="@dimen/spacing_m"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/common_text"
            android:textSize="@dimen/text_sub_title"  />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:layout_marginEnd="@dimen/spacing_xl"
        android:background="@drawable/btn_ad_shape"
        android:text="@string/login"
        android:textColor="@color/public_white"
        android:textSize="@dimen/text_sub_title" />


    <TextView
        android:id="@+id/tv_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginRight="@dimen/spacing_xl"
        android:text="@string/forgot_pwd"
        android:textColor="#fffe3465"
        android:textSize="@dimen/text_normal" />

</LinearLayout>