<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/public_include_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:background="@color/public_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="@dimen/spacing_m"
                android:hint="@string/enter_phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:padding="@dimen/spacing_l"
                android:textColor="@color/common_text"
                android:textSize="@dimen/text_sub_title" />

            <TextView
                android:id="@+id/tv_get_code"
                style="@style/public_CommonPadding_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/spacing_l"
                android:background="@drawable/btn_orange1_selector"
                android:text="@string/get_auth_code"
                android:textColor="@color/public_white"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />
        </RelativeLayout>

        <View style="@style/public_CommonLine" />

        <EditText
            android:id="@+id/et_auth_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_auth"
            android:drawablePadding="@dimen/spacing_m"
            android:hint="@string/enter_auth_code"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/spacing_l"
            android:textColor="@color/common_text"
            android:textSize="@dimen/text_sub_title" />

        <View style="@style/public_CommonLine" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_pwd"
            android:drawablePadding="@dimen/spacing_m"
            android:hint="@string/enter_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/spacing_l"
            android:textColor="@color/common_text"
            android:textSize="@dimen/text_sub_title" />

        <View style="@style/public_CommonLine" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_pwd"
            android:drawablePadding="@dimen/spacing_m"
            android:hint="@string/enter_confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/spacing_l"
            android:textColor="@color/common_text"
            android:textSize="@dimen/text_sub_title" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_invite_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:background="@color/public_white"
        android:drawableLeft="@drawable/ic_recommend"
        android:drawablePadding="@dimen/spacing_m"
        android:hint="@string/enter_invite_code"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:padding="@dimen/spacing_l"
        android:textColor="@color/common_text"
        android:textSize="@dimen/text_sub_title" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:layout_marginEnd="@dimen/spacing_xl"
        android:background="@drawable/btn_ad_shape"
        android:text="@string/register"
        android:textColor="@color/public_white"
        android:textSize="@dimen/text_sub_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:layout_marginEnd="@dimen/spacing_l"
        android:orientation="horizontal">

        <View
            android:layout_width="0.0dip"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@color/divider_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:text="@string/register_custom"
            android:textColor="@color/common_text_light"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@color/divider_color" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_contact_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:src="@drawable/ic_contact_custom" />
</LinearLayout>