<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_layout"></include>
    <View style="@style/discover_style_view"></View>
    <LinearLayout
        android:id="@+id/ll_headimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userinfo_icon"
            android:textColor="@color/public_black"
            android:textSize="@dimen/sp_16"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/avatar_b_usr"
            android:layout_marginRight="@dimen/spacing_xl"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_go"/>
    </LinearLayout>
    <View style="@style/discover_line"></View>
    <LinearLayout
        android:id="@+id/ll_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nickname"
            android:textColor="@color/public_black"
            android:textSize="@dimen/sp_16"/>
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a333444"
            android:paddingRight="@dimen/spacing_xl"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_go"/>
    </LinearLayout>
    <View style="@style/discover_line"></View>
    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userinfo_account"
            android:textColor="@color/public_black"
            android:textSize="@dimen/sp_16"/>
        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18180022888"
            android:paddingRight="@dimen/spacing_xl"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_go"/>
    </LinearLayout>
    <View style="@style/discover_line"></View>
    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textColor="@color/public_black"
            android:textSize="@dimen/sp_16"/>
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18180022888"
            android:paddingRight="@dimen/spacing_xl"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_go"/>
    </LinearLayout>

    <View style="@style/discover_line"></View>
    <LinearLayout
        android:id="@+id/ll_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userinfo_QR_code"
            android:textColor="@color/public_black"
            android:textSize="@dimen/sp_16"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/me_qr_code"
            android:layout_marginRight="@dimen/spacing_xl"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_go"/>
    </LinearLayout>
    <View style="@style/discover_style_view"></View>
    <LinearLayout
        android:id="@+id/ll_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userinfo_sex"
            android:textColor="@color/public_black"
            android:textSize="@dimen/sp_16"/>
        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userinfo_man"
            android:paddingRight="@dimen/spacing_xl"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_go"/>
    </LinearLayout>
    <View style="@style/discover_style_view"
        android:layout_weight="1"></View>
</LinearLayout>